allow usage of custom mappers and collection types